--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.1",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
